# clicker

./: .gitignore  README.md  pyproject.toml
main/clicker/: __main__.py
main/clicker/src/: log.py
main/clicker/src/commands/: clear.py  delete.py  help.py  list.py  play.py  record.py  rename.py  repeat.py  show.py
main/clicker/src/database/: database.py
main/clicker/src/database/files/: abc.txt  coc.txt  coc2.txt  file.txt  new.txt  new2.txt  new3.txt  test.txt
