[tool.poetry]
name = "clicker"
version = "0.1.1"
description = ""
authors = ["marcelm9 <marcel.menzel09@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "clicker", from = "main" }]

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.7.0"
pynput = "^1.7.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
